--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   cloud_firestore: ^4.15.4
   firebase_auth: ^4.17.4
   provider: ^6.1.1
+  image_picker: ^1.0.7
+  firebase_storage: ^11.6.6
 
 dev_dependencies:
   flutter_test:
